Fixing spacing of buttons.

--- a/_scss/pages/_ltree.scss
+++ b/_scss/pages/_ltree.scss
@@ -24,13 +24,24 @@ body.ltree-body {
 
   .ltree-buttons {
     width: 90%;
-
+    max-width: 35rem;
     .btn {
       --bs-btn-hover-bg: #FFFFDD;
-      img {
-        width: auto;
-        height: 2.0rem;
-        padding-right: 0.25rem;
+      div {
+        width: 100%;
+        vertical-align: middle;
+        img {
+          width: auto;
+          vertical-align: middle;
+          height: 2.0rem;
+          padding-left: 0.2rem;
+          padding-right: 0.2rem;
+        }
+        span {
+          vertical-align: middle;
+          padding-left: 0.2rem;
+          padding-right: 0.2rem;  
+        }
       }
     }  
   }
